Adding the ezjail conf.

--- a/beastieCOjails/etc/ezjail.conf
+++ b/beastieCOjails/etc/ezjail.conf
@@ -2,7 +2,7 @@
 # 27JUL2016
 ezjail_jaildir=/beastienas/local/jails
 ezjail_use_zfs="YES"
-ezjail_jailzfs="ScoMachine/beastiejails
+ezjail_jailzfs="ScoMachine/beastiejails"
 # FTP Host closest to your GeoLocation.
 # https://www.freebsd.org/doc/handbook/mirrors-ftp.html
 ezjail_ftphost=ftp2.jp.freebsd.org
